--- a/src/_includes/partials/navbar.html
+++ b/src/_includes/partials/navbar.html
@@ -2,8 +2,8 @@
     <nav class="flex items-center justify-center lg:justify-between flex-wrap p-6 lg:px-0 container mx-auto" x-data="{ isOpen: false }" @keydown.escape="isOpen = false"  @click.away="isOpen = false">
         <!--Logo etc-->
         <div class="flex items-center">
-            <a href="/" class="text-indigo-500 font-bold text-lg">
-                Logo</a>
+            <a href="/">
+                <img src="/static/img/joe-code.png" width="32" height="32"></a>
         </div>
 
         <!--Toggle button (hidden on large screens)-->
@@ -17,12 +17,12 @@
         <!--Menu-->
         <div class="w-full flex-grow lg:flex lg:items-center lg:w-auto text-center " :class="{ 'block shadow-3xl': isOpen, 'hidden': !isOpen }" x-show.transition="true">
 
-            {% if navigation.items %}
+            {% if quicklinks.links %}
 
                 <ul class="pt-6 lg:pt-0 list-reset lg:flex justify-end flex-1 items-center">
-                    {% for item in navigation.items %}
+                    {% for item in quicklinks.links %}
                         <li class="nav__item mr-3">
-                            <a @click="isOpen = false" class="text-ml inline-block text-gray-500 no-underline hover:text-indigo-500 py-2 px-4" href="{{ item.url }}">{{ item.text }}</a>
+                            <a @click="isOpen = false" class="text-ml inline-block text-gray-500 no-underline hover:text-teal-600 py-2 px-4" href="{{ item.url }}">{{ item.title }}</a>
                         </li>
                     {% endfor %}
                 </ul>
