--- a/src/_includes/posts.html
+++ b/src/_includes/posts.html
@@ -9,6 +9,7 @@ prism: true
         <p class="font-mono text-center text-base leading-6 font-medium text-gray-500">
             <time> {{ date | readableDate }} </time>
         </p>
+        <p><a href="/blog" class="text-teal-600 font-bold">↵Back</a></p>
 
     </div>
     <article class="prose lg:prose-xl my-4 mx-auto">
