--- a/src/_includes/landing.html
+++ b/src/_includes/landing.html
@@ -15,6 +15,8 @@
     {% if prism == true %}
       <link rel="stylesheet" type="text/css" href="/static/css/prism-tomorrow.css">
     {% endif %}
+    <script defer data-domain="joekaiser.dev" src="https://analytics.skynest.dev/js/script.js"></script>
+
   </head>
   <body>
 
